client/css/canvas.css
body {
    margin: 0;
    height: 100vh;
    display: flex;
    flex-direction: column;
}

.header {
    background-color: #002050;
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    display: flex;
    padding: 10px;
    vertical-align: middle;
}

.header img {
    margin: 10px;
    max-height: 55px;
}

.highlight,
#pxdraw-login {
    color: #b8d532;
}

.text-container {
    flex-grow: 1;
}

.title {
    font-size: 20px;
}

.description {
    font-size: 15px;
    padding-top: 5px;
}

.main-area {
    display: flex;
    flex-grow: 1;
    overflow: hidden;
}

.palette-container {
    width: 35px;
    display: flex;
    flex-direction: column;
    align-content: center;
}

.palette-button {
    width: 25px;
    height: 25px;
    margin: 9px;
}

.bordered {
    border: 1px solid #cccccc;
}

.nonbordered {
    border: 1px solid rgba(0, 0, 0, 0);
}

.palette-button.selected {
    outline: 2px solid #333333;
    border: 2px solid white;
    margin: 8px;
}

#viewport-canvas {
    position: absolute;
    top: 0px;
    left: 0px;
    z-index: 0;
}

#canvas-container {
    background-image: url("../img/background_patch.png");
    background-repeat: repeat;
    margin-left: 10px;
    flex-grow: 1;
    border-left: 1px solid #cccccc;
}

#canvas {
    image-rendering: -moz-crisp-edges;
    image-rendering: -webkit-optimize-contrast;
    image-rendering: -o-crisp-edges;
    image-rendering: crisp-edges;
    image-rendering: pixelated;
    image-rendering: optimizeSpeed;
    image-rendering: optimize-contrast;
    -ms-interpolation-mode: nearest-neighbor;
    opacity: 0;
    position: relative;
    z-index: 1000;
}

#subcanvas {
    visibility: hidden;
}

.tweet-area {
    margin: 10px;
    position: absolute;
    top: 0px;
    right: 0px;
}

#coordinates-container {
    position: absolute;
    text-align: center;
    left: 0px;
    top: 10px;
    width: 70px;
    padding-top: 6px;
    padding-bottom: 6px;
    background-color: #002050;
    font-size: 14px;
    color: #ffffff;
    cursor: move;
    font-family: Arial, Helvetica, sans-serif;
}

.header-block-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0px 20px;
}

.header-block-title {
    font-size: 12px;
    text-align: center;
}

.header-block-main {
    font-size: 24px;
    text-align: center;
    padding-top: 5px;
}

.header-block-main a {
    color: #cccccc;
    text-decoration: none;
}

.palette-container input {
    position: absolute;
    bottom: 0px;
}

